--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,11 @@
   text-align: center;
   display: block;
 }
-
+.head_att{
+   font-family: "Console";
+   text-align: center;
+   color: rgba(255,255,240,1);
+}
 .heading{
   font-size: 170%;
   font-family: "Console";
@@ -127,6 +131,8 @@
   left:19.8%;
   opacity:0.7;
   font-size: 100%;
+  float: right;
+
 }
 .acc_set{
 
@@ -135,9 +141,10 @@
   transition-duration: 0.4s;
   cursor: pointer;
   color: black; 
-  right: 3%;
+  margin-right: 1%; 
   z-index: 1;
-  position: relative;
+  position:relative;
+/*  float: right;*/
 }
 #sidenav {
     height: 100%;
@@ -222,7 +229,9 @@ margin-top: 2%;
   border: 2px solid #008CBA;
   border-radius: 25px;
   z-index: 1;
-  position: relative;
+/*  float: right;*/
+/*  position: relative;*/
+  margin-right: 5%;
 
 }
 .log_out:hover{
@@ -230,7 +239,15 @@ margin-top: 2%;
     color: #008CBA;
 
 }
+.set_pic{
+  height: 65%;
+/*  width: 7%;*/
+  margin-right: 2%;
+  margin-bottom: 1%;
+  position: relative;
+  vertical-align: bottom;
 
+}
 /*REMARKS FUNC>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 .remark_body{
   background:rgba(255,255,255,0.5);
@@ -302,7 +319,7 @@ margin-top: 2%;
 
 
 .largeFont{
-  font-size: 30px;
+  font-size: 100%;
 }
 
 .heading{
@@ -327,25 +344,29 @@ margin-top: 2%;
   border: none;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   font-family: "Lucida Console", Monaco, monospace;
-  font-size: 130%;
+  font-size: 100%;
   overflow-y: scroll;
 }
 
 .addHolidayButton{
-  position: relative;
-  top:10%;
-  padding: 5px;
-  height: 7%;
-  width: 40%;
-  top: 2%;
-  /*margin-left: 5.75%;*/
-  /*padding: 10px;*/
+    background-color: #2980B9;
+    position: relative;
+    color: white;
+    padding: 10%;
+    font-size: 100%;
+    border: none;
+    width: 100%;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    display: inline-block;
 }
 
 .attendanceButtons{
   width: 25%;
   height: 55%;
   bottom: 10%;
+  margin-left: 2%;
   background-color: #ffffff;
   display: block;
 }
@@ -356,8 +377,8 @@ margin-top: 2%;
     background-color: #2980B9;
     position: relative;
     color: white;
-    padding: 16px;
-    font-size: 16px;
+    padding: 10%;
+    font-size: 100%;
     border: none;
     width: 100%;
     border-radius: 5px;
@@ -374,6 +395,7 @@ margin-top: 2%;
 .dropdown {
     position: relative;
     display: inline-block;
+    margin-top: 3%;
 
 }
 
@@ -428,20 +450,21 @@ margin-top: 2%;
 
 .addHolidayButton{
 
- /* margin-left: 2.3%;*/
-  height: 4%;
-  margin-top: 5%;
-  width: 20%;
+  background-color: #2980B9;
+  position: relative;
+  color: white;
+  padding: 10%;
+  font-size: 100%;
   border: none;
-  border-radius: 3px;
-  text-align: center;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.1);
-  background-color: #008CBA
+  width: 80%;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 
 }
 
+
 .addHolidayButton:hover{
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   background-color: #3498DB
 
 }
@@ -489,23 +512,14 @@ margin-top: 2%;
 }
 .dateI{
   display: block;
+  width: 80%;
+}
+.i{
+  margin-top: 30%;
 }
 
 
 /*ZAINABBBB*/
-
-.dropbtn {
-
-    background-color: #2980B9;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 3%;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
 
 #dd{
   position: relative;
@@ -531,67 +545,55 @@ margin-top: 2%;
   margin-left: 22% !important;
   min-width: 30%;
   font-family:"Lucida Console";
-  margin-top: 15%;
+  margin-top: 7%;
   color: rgba(255,255,240,1)
 }
 
 .form{
-   width: 20%;
+  width: 20%;
   margin-left: 6% !important;
-  /*opacity:0.5;*/
-  margin-top: 21%;
-  height: 25px;
-
-
-
+  margin-top: 5%;
+  height: 5%;
 }
 
 .form2{
-   width: 20%;
+  width: 20%;
   margin-left: 6.5% !important;
-  /*opacity:0.5;*/
-  margin-top: 21%;
-  height: 25px; 
+  margin-top: 5%;
+  height:5%; 
 
 }
 
 .form3{
-  position: absolute;
-   width: 20%;
-  margin-left: -49% !important;
-  /*opacity:0.5;*/
-  margin-top: 28%;
-  height: 25px; 
+  width: 20%;
+  margin-left: 6% !important;
+  height: 5%; 
 
 }
 
 .form4{
-  position: absolute;
   width: 20%;
-  margin-left: -21% !important;
-  /*opacity:0.5;*/
-  margin-top: 28%;
-  height: 25px; 
+  margin-left: 6.5% !important;
+  height: 5%; 
 
 }
 
-.form5{
-  position: absolute;
+.form5{/*
+  position: absolute;*/
   width: 20%;
-  margin-left: -49% !important;
+  margin-left: 6% !important;
   /*opacity:0.5;*/
-  margin-top: 35.5%;
-  height: 25px; 
+  margin-top: 3%;
+  height: 5%; 
 
 }
 
 .form6{
-  position: absolute;
   width: 20%;
-  margin-left: -49% !important;
+  margin-left: 6% !important;
   /*opacity:0.5;*/
-  margin-top: 42.6%;
-  height: 25px; 
+  margin-top: 3%;
+  height: 5%; 
 
 }
 
@@ -685,113 +687,102 @@ margin-top: 2%;
 
 }
 
-.generateButton{
-  text-align:center;
+.generateButton_user{
   -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
   cursor: pointer;
-  font-size: 20px;
-
-  width: 10%;
-  margin-left: -17.5% !important;
-  margin-top: 25%;
-  height: 30px;
+  font-size: 100%;
+  margin-left: 5.5% !important;
+  margin-top: 2.3%;
+  height: 5%;
   background-color: green;
   color: black; 
-  border: 2px solid green;
-  border-radius: 5px;
+  border: 2% solid green;
+  border-radius: 8%;
   text-align: center;
   z-index: 1;
-  position: fixed;
-  
+  position: fixed; 
+
 
 }
 
-.generate_button:hover{
+.generateButton_user:hover{
     background-color: #FFFFFF;
     color: green;
 
 }
 
-.generateButton2{
-  text-align:center;
+.generateButton_pass{
   -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
   cursor: pointer;
-  font-size: 20px;
-
-  width: 10%;
-  margin-left: -17.5% !important;
-  margin-top: 30%;
-  height: 30px;
+  font-size: 100%;
+  margin-left: 5.5% !important;
+  margin-top: 2.3%;
+  height: 5%;
   background-color: green;
   color: black; 
-  border: 2px solid green;
-  border-radius: 5px;
+  border: 2% solid green;
+  border-radius: 8%;
   text-align: center;
   z-index: 1;
-  position: fixed;
-  
-
+  position: fixed; 
 }
 
-.generate_button2:hover{
+.generateButton_pass:hover{
     background-color: #FFFFFF;
     color: green;
 
 }
 
-.generateButton3{
-  text-align:center;
+.generateButton_cre{
   -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
   cursor: pointer;
-  font-size: 24px;
-
-  width: 15%;
-  margin-left: 15% !important;
-  margin-top: 32%;
-  height: 35px;
+  font-size: 100%;
+  width: 17%;
+  margin-left: 23% !important;
+  margin-top: 6%;
+  height: 5%;
   background-color: #008CBA;
-  color: black; 
   border: 2px solid #008CBA;
-  border-radius: 5px;
+  color: black; 
+  border-radius: 20%;
   text-align: center;
   z-index: 1;
-  position: fixed;
+  position: fixed; 
   
 
 }
 
-.generate_button3:hover{
+.generateButton_cre:hover{
     background-color: #FFFFFF;
     color: #008CBA;
 
 }
 
-.generateButton4{
-  text-align:center;
+.generateButton_photo{
   -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
   cursor: pointer;
-  font-size: 20px;
-
-  width: 8%;
-  margin-left: 17.5% !important;
-  margin-top: 12%;
-  height: 25px;
-  background-color: #008CBA;
+  font-size: 100%;
+  width: 17%;
+  margin-left: 50% !important;
+  margin-top: 20%;
+  height: 5%;
+  background-color: yellow;
+  border: 2px solid yellow;
   color: black; 
-  border: 2px solid #008CBA;
-  border-radius: 5px;
+  border-radius: 20%;
   text-align: center;
   z-index: 1;
-  position: fixed;
+  position: fixed; 
+
   
 
 }
 
-.generate_button4:hover{
+.generateButton_photo:hover{
     background-color: #FFFFFF;
     color: #008CBA;
 
@@ -801,14 +792,15 @@ margin-top: 2%;
 .photo{
   position: fixed;
   width: 15%;
-  margin-left: 14% !important;
+  right: 8% !important;
   opacity:5;
   margin-top: 3%;
-  height: 150px;
+  height: 25%;
 }
 
 .displayBox {
   position: absolute;
+  margin-top: 7%;
   width: 100%;
   height: 50%;
   font-family: "Lucida Console", Monaco, monospace;
@@ -819,40 +811,32 @@ margin-top: 2%;
 
 .removeBox {
   position: fixed;
-  bottom: 0px;
   width: 100%;
   height: 100%;
-  opacity: 2;
-  color: black;
-  font-family: "Lucida Console", Monaco, monospace;
+  font-family: "Lucida Console";
   font-size: 130%;
-
 }
 
 .popUp{
-    width: 100%;
-    position: fixed;
-
+  width: 100%;
+  position: fixed;
   background:rgba(255,255,255,0.5);
   height:100%;
-  /*text-align: right;*/
-  font-size: 20px;
+  font-size: 100%;
 }
 .smallpopUp{
   width: 70%;
-    position: fixed;
-align-content: center;
+  position: fixed;
   background:white;
   height:80%;
   margin-right: 18%;
   margin-left: 25%;
-  margin-top: 5%;
+  margin-top: 7%;
   margin-bottom: 5%;
-  /*opacity: 0.4;*/
   background: rgba(255,255,255,0.5);
-  /*text-align: right;*/
+  font-size: 100%;
+  display: block;
 
-  font-size: 20px;
 }
 .addusers_h{
   position: fixed;
@@ -868,16 +852,47 @@ line-height: 370px;
 
 
 .create_h{
-  position: fixed;
- text-align: center;
-/*font-family: bold "Lucida Console", Monaco, monospace;*/
-font-size: 28px;
-line-height: 200px;
+  position: relative;
+  text-align: center;
+  font-family:"Lucida Console";
   color: black;
-   height: 70%;
-  width: 70%;
+
+  font-size: 150%;
   color: black;
   display: block;
+  
+    }
+/*//////////////////////////////////////PARENT*/
+.warn{
+  height: 10%;
+/*  width: 7%;*/
+  margin-left: 2%;
+  margin-top: 1%;
+  position: relative;
+  vertical-align: top;
 
-  right: 6%;
+}
+.remark_body_p{
+  background:rgba(255,255,255,0.5);
+
+  min-width: 60%;
+  height: 50%;
+  top:15%;
+  left: 32%;
+  z-index: 0;
+  position: absolute;
+  resize: none;
+  display: inline-block;
+
+}
+.rem_help{
+  background:rgba(255,255,255,0);
+  display: inline-block;
+  width: 90%;
+  height: 90%;
+  margin-left: 2%;
+  margin-top: 2%;
+  z-index: 0;
+  position: relative;
+
 }
