--- a/css/style.css
+++ b/css/style.css
@@ -864,25 +864,32 @@ line-height: 370px;
     }
 /*//////////////////////////////////////PARENT*/
 .warn{
-  height: 10%;
+  height: 14%;
 /*  width: 7%;*/
-  margin-left: 2%;
-  margin-top: 1%;
-  position: relative;
-  vertical-align: top;
-
+/*  margin-left: 2%;*/
+  margin-right: 1%;
+  margin-top: 0.5%;
+/*  position: absolute;*/
+}
+.thumb{
+  height: 30%;
+/*  width: 7%;*/
+/*  margin-left: 2%;*/
+  margin-right: 1%;
+  margin-top: 0.5%;
+/*  position: absolute;*/
 }
 .remark_body_p{
   background:rgba(255,255,255,0.5);
 
-  min-width: 60%;
-  height: 50%;
-  top:15%;
-  left: 32%;
+  min-width: 40%;
+  height: 20%;
+  top:2%;
+  left: 30%;
   z-index: 0;
   position: absolute;
-  resize: none;
   display: inline-block;
+
 
 }
 .rem_help{
@@ -893,6 +900,21 @@ line-height: 370px;
   margin-left: 2%;
   margin-top: 2%;
   z-index: 0;
-  position: relative;
+  text-align: center;
+  /*position:absolute;*/
 
+
+}
+.remarksBody{
+  
+  display: inline-block;
+  margin-left: 2%;
+  /*position: absolute;*/
+}
+.img_rem_div{
+  width: 6%;
+/*  height: 100%;*/
+
+  display: block;
+  position:relative;
 }
