--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@
 #home_back{
   width: 100%;
   height: 100%; 
-  background-image: url("bansr.jpg");
+  background-image: url("background.jpg");
   filter:blur(10px);
   background-size:cover;
   background-position: center;
@@ -936,7 +936,7 @@ line-height: 370px;
 
 .attendance_body_p{
   background:rgba(255,255,255,0.5);
-  min-width: 75%;
+  width: 75%;
   height: 62.5%;
   bottom:15%;
   position: fixed;
@@ -976,11 +976,6 @@ line-height: 370px;
   font-weight: 700;
   position: relative;
   max-width: 100%
-  
-  
-  /*width: 50%;*/
-  /*top: 25%;*/
-  /*margin: 0 auto;*/
  
 }
 
@@ -1011,28 +1006,12 @@ line-height: 370px;
 
 .attendance_year {
   color: #E8E8E8;
-  font-size: 30px;
+  font-size: 200%;
   display: inline-block;
+  float: right;
   margin-left: 1%;
-
-  /*float: right;
-  position: relative;
-  right: 5%;
-  top: 0%;
-  font-weight: bold;*/
-}
-
-.attendance_triangle-left{
-  border-top: 5px solid transparent;
-  border-right: 10px solid #E8E8E8;
-  border-bottom: 5px solid transparent;
-  display: inline-block;
-  margin-left: 80%;
-/*  float: right;
-  position: relative;
-  margin-top: 2.75%;
-  right: 13.5%;
-  top: 0%;*/
+  margin-right: 1%;
+  margin-top: 3%;
 }
 
 .attendance_triangle-right {
@@ -1041,22 +1020,80 @@ line-height: 370px;
   border-left: 10px solid #E8E8E8;
   border-bottom: 5px solid transparent;
   display: inline-block;
-  margin-left: 1%;
- /* float: right;
-  left: 3.5%;
-  position: relative;
-  margin-top: 2.75%;
-  
-  left: s10%;
-  top: 0%;*/
+  float: right;
+  margin-right: 5%;
+  margin-top: 4.5%;
+}
+.attendance_triangle-left{
+  border-top: 5px solid transparent;
+  border-right: 10px solid #E8E8E8;
+  border-bottom: 5px solid transparent;
+  display: inline-block;
+  float: right;
+  margin-top: 4.5%;
 }
 
 
 .attendance_triangle-right:hover{
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.3);
-
+  border-top: 7px solid transparent;
+  border-left: 12px solid #E8E8E8;
+  border-bottom: 7px solid transparent;
 }
 .attendance_triangle-left:hover{
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.3);
+  border-top: 7px solid transparent;
+  border-right: 12px solid #E8E8E8;
+  border-bottom: 7px solid transparent;
+}
+
+/*Shahzeb: Results parent>*/
+
+
+.subject{
+  /*background:rgba(255,255,255,0.5);*/
+  /*background:rgba(0,0,0,0.5);*/
+  display: inline-block;
+  width: 11.5%;
+  margin-left: 10.5%;
+  margin-right: 11%;
+  margin-top: 7%; 
+}
+
+.subjects{
+  font-size: 40px;
+  font-weight: 900;
+}
+
+.round{
+  border-radius: 50%;
+}
+
+.results_body_p{
+  width: 75%;
+  height: 62.5%;
+  bottom:15%;
+  position: fixed;
+  right: 2.5%;
+  resize: both;
+  border-radius: 10px;
+  display: inline-block;
+  font-family: 'Kanit', sans-serif;
+
 
 }
+
+.onhover:hover{
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.3);
+}
+
+.onhover:active{
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0);
+
+}
+
+.fitH{
+  width: 100%;
+}
+
+/*<Shahzeb: Results parent*/
