--- a/css/style.css
+++ b/css/style.css
@@ -1069,7 +1069,7 @@ line-height: 370px;
   border-radius: 50%;
 }
 
-.results_body_p{
+.subjects_body_p{
   width: 75%;
   height: 62.5%;
   bottom:15%;
@@ -1097,5 +1097,66 @@ line-height: 370px;
 }
 
 /*<Shahzeb: Results parent*/
+.results_body_p{
+  background:rgba(255,255,255,0.5);
+  width: 75%;
+  height: 62.5%;
+  bottom:15%;
+  position: fixed;
+  right: 2.5%;
+  resize: both;
+  border-radius: 10px;
+  display: inline-block;
+  font-family: 'Kanit', sans-serif;
+}
 
 
+.arrow {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 5px;
+}
+
+.arrow:hover{
+  background:rgba(255,255,255,0.5);
+
+}
+
+.right {
+  margin-left: 5%;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+.left {
+  margin-right: 5%;
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+}
+
+.up {
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+}
+
+.down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
+
+
+.resultsMonthArea{
+  /*width: 100%;*/
+  /*height: 10%;*/
+  /*border: 1px solid #c3c3c3;*/
+  /*display: -webkit-flex; /* Safari */*/
+    /*-webkit-align-items: center; /* Safari 7.0+ */*/
+    /*display: flex;*/
+    align-items: center;
+  
+}
+.results_month{
+  display: inline-block;
+  /*text-align: center;*/
+}
