--- a/css/style.css
+++ b/css/style.css
@@ -1213,3 +1213,233 @@ body {
 #cal #cal-frame table.temp { 
     position:absolute; 
 }
+
+
+/*****************************************Parent Attendance******************************/
+
+.attendance_body_p{
+  background:rgba(255,255,255,0.5);
+  width: 75%;
+  height: 62.5%;
+  bottom:15%;
+  position: fixed;
+  right: 2.5%;
+  resize: both;
+  border-radius: 10px;
+  display: inline-block;
+  font-family: 'Kanit', sans-serif;
+  /*z-index: 0;*/
+  /*display: inline-block;*/
+}
+
+.attendance_date{
+  font-size: 200px;
+  color: white;
+  height: 10%;
+  top: 32%; 
+  display: block;
+  
+  /*font-family: 'Kanit', sans-serif;*/
+  text-align: center;
+  margin-top: auto;
+  font-weight: 1000;
+  position: relative;
+  max-width: 100%
+}
+
+.attendance_month{
+  font-size: 100 px;
+  height: 10%;
+  top: 35%;
+  color: white;
+  display: block;
+  font-family: 'Kanit', sans-serif;
+  text-align: center;
+  margin-top: auto;
+  font-weight: 700;
+  position: relative;
+  max-width: 100%
+ 
+}
+
+.calenderLeft{
+  background:rgba(0,140,186,0.5);
+  width: 35%;
+  height: 100%;
+  bottom:0%;
+  left: 0%;
+  position: absolute;
+  resize: both;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.calenderRight{
+  background:rgba(0,0,0,0.5);
+  width: 65%;
+  height: 100%;
+  bottom:0%;
+  right: 0%;
+  position: absolute;
+  resize: both;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  display: block;
+}
+
+.attendance_year {
+  color: #E8E8E8;
+  font-size: 200%;
+  display: inline-block;
+  float: right;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-top: 3%;
+}
+
+.attendance_triangle-right {
+
+  border-top: 5px solid transparent;
+  border-left: 10px solid #E8E8E8;
+  border-bottom: 5px solid transparent;
+  display: inline-block;
+  float: right;
+  margin-right: 5%;
+  margin-top: 4.5%;
+}
+.attendance_triangle-left{
+  border-top: 5px solid transparent;
+  border-right: 10px solid #E8E8E8;
+  border-bottom: 5px solid transparent;
+  display: inline-block;
+  float: right;
+  margin-top: 4.5%;
+}
+
+
+.attendance_triangle-right:hover{
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.3);
+  border-top: 7px solid transparent;
+  border-left: 12px solid #E8E8E8;
+  border-bottom: 7px solid transparent;
+}
+.attendance_triangle-left:hover{
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.3);
+  border-top: 7px solid transparent;
+  border-right: 12px solid #E8E8E8;
+  border-bottom: 7px solid transparent;
+}
+
+/*Shahzeb: Results parent>*/
+
+
+.subject{
+  /*background:rgba(255,255,255,0.5);*/
+  /*background:rgba(0,0,0,0.5);*/
+  display: inline-block;
+  width: 11.5%;
+  margin-left: 10.5%;
+  margin-right: 11%;
+  margin-top: 4%; 
+}
+
+.subjects{
+  font-size: 40px;
+  font-weight: 900;
+}
+
+.round{
+  border-radius: 50%;
+}
+
+.subjects_body_p{
+  width: 75%;
+  height: 62.5%;
+  bottom:15%;
+  position: fixed;
+  right: 2.5%;
+  resize: both;
+  border-radius: 10px;
+  display: inline-block;
+  font-family: 'Kanit', sans-serif;
+
+
+}
+
+.onhover:hover{
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.3);
+}
+
+.onhover:active{
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0);
+
+}
+
+.fitH{
+  width: 100%;
+}
+
+/*<Shahzeb: Results parent*/
+.results_body_p{
+  background:rgba(255,255,255,0.5);
+  width: 75%;
+  height: 62.5%;
+  bottom:15%;
+  position: fixed;
+  right: 2.5%;
+  resize: both;
+  border-radius: 10px;
+  display: inline-block;
+  font-family: 'Kanit', sans-serif;
+}
+
+
+.arrow {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 5px;
+}
+
+.arrow:hover{
+  background:rgba(255,255,255,0.5);
+
+}
+
+.right {
+  margin-left: 5%;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+.left {
+  margin-right: 5%;
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+}
+
+.up {
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+}
+
+.down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
+
+
+.resultsMonthArea{
+  /*width: 100%;*/
+  /*height: 10%;*/
+  /*border: 1px solid #c3c3c3;*/
+  /*display: -webkit-flex; /* Safari */*/
+    /*-webkit-align-items: center; /* Safari 7.0+ */*/
+    /*display: flex;*/
+    align-items: center;
+  
+}
+.results_month{
+  display: inline-block;
+  /*text-align: center;*/
+}
