--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@
 #home_back{
   width: 100%;
   height: 100%; 
-  background-image: url("bansr.jpg");
+  background-image: url("background.jpg");
   filter:blur(10px);
   background-size:cover;
   background-position: center;
