--- a/css/style.css
+++ b/css/style.css
@@ -1114,10 +1114,10 @@ body {
     -moz-box-shadow:0px -1px 2px rgba(0, 0, 0, 0.65 ); 
     -webkit-box-shadow:0px -1px 2px rgba(0, 0, 0, 0.65 ); 
 } 
-.right.hook { 
+.right1.hook { 
     right:15%; 
 } 
-.left.hook { 
+.left1.hook { 
     left: 15%; 
 }
 
@@ -1340,7 +1340,7 @@ body {
   width: 11.5%;
   margin-left: 10.5%;
   margin-right: 11%;
-/*  margin-top: 4%; */
+  margin-top: 4%; 
 }
 
 .subjects{
@@ -1353,14 +1353,13 @@ body {
 }
 
 .subjects_body_p{
-/*  width: 70%;*/
-  height: 60.5%;
-/*  bottom:15%;*/
-  position: absolute;
+  width: 75%;
+  height: 62.5%;
+  bottom:15%;
+  position: fixed;
   right: 2.5%;
-  margin-top: 2%;
-/*  resize: both;*/
-/*  border-radius: 10px;*/
+  resize: both;
+  border-radius: 10px;
   display: inline-block;
   font-family: 'Kanit', sans-serif;
 
