--- a/css/style.css
+++ b/css/style.css
@@ -1354,10 +1354,9 @@ body {
 
 .subjects_body_p{
   width: 75%;
-  height: 62.5%;
 
-  bottom:25%;
-
+  margin-bottom:7%;
+  margin-top: 2%;
   position: fixed;
   right: 2.5%;
   resize: both;
@@ -1366,6 +1365,11 @@ body {
   font-family: 'Kanit', sans-serif;
 
 
+}
+
+.subs{
+  font-weight: 800;
+  font-size: 100%
 }
 
 .onhover:hover{
@@ -1383,15 +1387,15 @@ body {
 
 /*<Shahzeb: Results parent*/
 .results_body_p{
-  background:rgba(255,255,255,0.5);
+  /*background:rgba(255,255,255,0.5);*/
   width: 75%;
   height: 62.5%;
   bottom:15%;
-  position: fixed;
+  position: absolute;
   right: 2.5%;
-  resize: both;
+  display: block;
+  margin: auto;
   border-radius: 10px;
-  display: inline-block;
   font-family: 'Kanit', sans-serif;
 }
 
@@ -1432,13 +1436,8 @@ body {
 
 
 .resultsMonthArea{
-  /*width: 100%;*/
-  /*height: 10%;*/
-  /*border: 1px solid #c3c3c3;*/
-  /*display: -webkit-flex; /* Safari */*/
-    /*-webkit-align-items: center; /* Safari 7.0+ */*/
-    /*display: flex;*/
-    align-items: center;
+
+  margin: auto;
   
 }
 .results_month{
@@ -1446,3 +1445,22 @@ body {
   /*text-align: center;*/
 }
 
+.results_table_p{
+  background:rgba(255,255,255,0.5);
+  width: 90%;
+  height: 62.5%;
+  bottom: 5%;
+  left: 5%;
+  position: absolute;
+  resize: both;
+  border-radius: 10px;
+  display: inline-block;
+  font-family: 'Kanit', sans-serif;
+}
+
+
+
+.results_table_heading{
+  width: 19%;
+  margin-left: 10%;
+}
