--- a/css/style.css
+++ b/css/style.css
@@ -1133,14 +1133,14 @@ body {
     text-align:center; 
     position:absolute; 
 } 
-#cal .header .left.button { 
+#cal .header .left1.button { 
     left:0; 
     -webkit-border-top-left-radius: 5px; 
     -moz-border-radius-topleft: 5px; 
     border-top-left-radius: 5px; 
     border-right:1px solid #ae2a0c; 
 } 
-#cal .header .right.button { 
+#cal .header .right1.button { 
     right:0; 
     top:0; 
     border-left:1px solid #ae2a0c; 
@@ -1361,14 +1361,8 @@ body {
 
 .subjects_body_p{
   width: 75%;
-<<<<<<< HEAD
-
-  margin-bottom:7%;
-=======
 /*  height: 62.5%;*/
-
   margin-bottom: 7%;
->>>>>>> fbde3edae6966232b1071cf909c47329662fc66d
   margin-top: 2%;
   position: fixed;
   right: 2.5%;
