--- a/css/style.css
+++ b/css/style.css
@@ -546,9 +546,9 @@ margin-top: 2%;
  
   margin-left: 22% !important;
   min-width: 30%;
-  font-family:"Lucida Console";
+  font-family:'Kanit' , sans-serif;
   margin-top: 7%;
-  color: rgba(255,255,240,1)
+  color: black;
 }
 
 .form{
@@ -565,13 +565,7 @@ margin-top: 2%;
   height:5%; 
 
 }
-.form22{
-  width: 20%;
-  margin-left: 2.5% !important;
-  margin-top: 5%;
-  height:5%; 
 
-}
 .form3{
   width: 20%;
   margin-left: 6% !important;
@@ -703,9 +697,9 @@ margin-top: 2%;
   margin-left: 5.5% !important;
   margin-top: 2.3%;
   height: 5%;
-  background-color: green;
+  background-color: #00FF00;
   color: black; 
-  border: 2% solid green;
+  border: 2% #00FF00;
   border-radius: 8%;
   text-align: center;
   z-index: 1;
@@ -716,7 +710,7 @@ margin-top: 2%;
 
 .generateButton_user:hover{
     background-color: #FFFFFF;
-    color: green;
+    color: #00FF00;
 
 }
 
@@ -728,9 +722,9 @@ margin-top: 2%;
   margin-left: 5.5% !important;
   margin-top: 2.3%;
   height: 5%;
-  background-color: green;
+  background-color: #00FF00;
   color: black; 
-  border: 2% solid green;
+  border: 2% #00FF00;
   border-radius: 8%;
   text-align: center;
   z-index: 1;
@@ -739,7 +733,7 @@ margin-top: 2%;
 
 .generateButton_pass:hover{
     background-color: #FFFFFF;
-    color: green;
+    color: #00FF00;
 
 }
 
@@ -755,7 +749,7 @@ margin-top: 2%;
   background-color: #008CBA;
   border: 2px solid #008CBA;
   color: black; 
-  border-radius: 20%;
+  border-radius: 10px;
   text-align: center;
   z-index: 1;
   position: fixed; 
@@ -778,10 +772,10 @@ margin-top: 2%;
   margin-left: 50% !important;
   margin-top: 20%;
   height: 5%;
-  background-color: yellow;
-  border: 2px solid yellow;
+  background-color: #00FF00;
+  border: 2px solid #00FF00;
   color: black; 
-  border-radius: 20%;
+  border-radius: 10px;
   text-align: center;
   z-index: 1;
   position: fixed; 
@@ -792,7 +786,7 @@ margin-top: 2%;
 
 .generateButton_photo:hover{
     background-color: #FFFFFF;
-    color: #008CBA;
+    color: #00FF00;
 
 }
 
@@ -843,7 +837,7 @@ margin-top: 2%;
   margin-bottom: 5%;
   background: rgba(255,255,255,0.5);
   font-size: 100%;
-  display: block;
+  display: inline-block;
 
 }
 .addusers_h{
@@ -937,289 +931,6 @@ line-height: 370px;
 
 
 }
-
-/*****************************************Parent Attendance******************************/
-
-.attendance_body_p{
-  background:rgba(255,255,255,0.5);
-  min-width: 75%;
-  height: 62.5%;
-  bottom:15%;
-  position: fixed;
-  right: 2.5%;
-  resize: both;
-  border-radius: 10px;
-  display: inline-block;
-  font-family: 'Kanit', sans-serif;
-  /*z-index: 0;*/
-  /*display: inline-block;*/
-}
-
-.attendance_date{
-  font-size: 200px;
-  color: white;
-  height: 10%;
-  top: 32%; 
-  display: block;
-  
-  /*font-family: 'Kanit', sans-serif;*/
-  text-align: center;
-  margin-top: auto;
-  font-weight: 1000;
-  position: relative;
-  max-width: 100%
-}
-
-.attendance_month{
-  font-size: 100 px;
-  height: 10%;
-  top: 35%;
-  color: white;
-  display: block;
-  font-family: 'Kanit', sans-serif;
-  text-align: center;
-  margin-top: auto;
-  font-weight: 700;
-  position: relative;
-  max-width: 100%
-  
-  
-  /*width: 50%;*/
-  /*top: 25%;*/
-  /*margin: 0 auto;*/
- 
-}
-
-.calenderLeft{
-  background:rgba(0,140,186,0.5);
-  width: 35%;
-  height: 100%;
-  bottom:0%;
-  left: 0%;
-  position: absolute;
-  resize: both;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-}
-
-.calenderRight{
-  background:rgba(0,0,0,0.5);
-  width: 65%;
-  height: 100%;
-  bottom:0%;
-  right: 0%;
-  position: absolute;
-  resize: both;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-  display: block;
-}
-
-.attendance_year {
-  color: #E8E8E8;
-  font-size: 30px;
-  display: inline-block;
-  margin-left: 1%;
-
-  /*float: right;
-  position: relative;
-  right: 5%;
-  top: 0%;
-  font-weight: bold;*/
-}
-
-.attendance_triangle-left{
-  border-top: 5px solid transparent;
-  border-right: 10px solid #E8E8E8;
-  border-bottom: 5px solid transparent;
-  display: inline-block;
-  margin-left: 80%;
-/*  float: right;
-  position: relative;
-  margin-top: 2.75%;
-  right: 13.5%;
-  top: 0%;*/
-}
-
-.attendance_triangle-right {
-
-  border-top: 5px solid transparent;
-  border-left: 10px solid #E8E8E8;
-  border-bottom: 5px solid transparent;
-  display: inline-block;
-  margin-left: 1%;
- /* float: right;
-  left: 3.5%;
-  position: relative;
-  margin-top: 2.75%;
-  
-  left: s10%;
-  top: 0%;*/
-}
-
-
-.attendance_triangle-right:hover{
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.3);
-
-}
-.attendance_triangle-left:hover{
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.3);
-
-}
-
-
-
-body { 
-    background: #e0e0e0; 
-} 
- 
-#cal { 
-    -moz-box-shadow:0px 3px 3px rgba(0, 0, 0, 0.25); 
-    -webkit-box-shadow:0px 3px 3px rgba(0, 0, 0, 0.25); 
-    margin:50px auto; 
-    font: 13px/1.5 "Helvetica Neue", Helvatica, Arial, san-serif; 
-    display:table; 
-}
-
-#cal .header { 
-    cursor:default; 
-    background: #cd310d; 
-    background: -moz-linear-gradient(top, #b32b0c, #cd310d); 
-    background: -webkit-gradient(linear, left top, left bottom, from(#b32b0c), to(#cd310d)); 
-    height: 34px; 
-    position: relative; 
-    color:#fff; 
-    -webkit-border-top-left-radius: 5px; 
-    -webkit-border-top-right-radius: 5px; 
-    -moz-border-radius-topleft: 5px; 
-    -moz-border-radius-topright: 5px; 
-    border-top-left-radius: 5px; 
-    border-top-right-radius: 5px; 
-    font-weight:bold; 
-    text-shadow:0px -1px 0 #87260C; 
-    text-transform: uppercase; 
-} 
-#cal .header span { 
-    display:inline-block; 
-    line-height:34px; 
-}
-
-
-#cal .header .hook { 
-    width: 9px; 
-    height: 28px; 
-    position: absolute; 
-    bottom:60%; 
-    border-radius:10px; 
-    -moz-border-radius:10px; 
-    -webkit-border-radius:10px; 
-    background:#ececec; 
-    background: -moz-linear-gradient(right top, #fff, #827e7d); 
-    background: -webkit-gradient(linear, right top, right bottom, from(#fff), to(#827e7d)); 
-    box-shadow:0px -1px 2px rgba(0, 0, 0, 0.65 ); 
-    -moz-box-shadow:0px -1px 2px rgba(0, 0, 0, 0.65 ); 
-    -webkit-box-shadow:0px -1px 2px rgba(0, 0, 0, 0.65 ); 
-} 
-.right1.hook { 
-    right:15%; 
-} 
-.left1.hook { 
-    left: 15%; 
-}
-
-
-#cal .header .button { 
-    width:24px; 
-    text-align:center; 
-    position:absolute; 
-} 
-#cal .header .left.button { 
-    left:0; 
-    -webkit-border-top-left-radius: 5px; 
-    -moz-border-radius-topleft: 5px; 
-    border-top-left-radius: 5px; 
-    border-right:1px solid #ae2a0c; 
-} 
-#cal .header .right.button { 
-    right:0; 
-    top:0; 
-    border-left:1px solid #ae2a0c; 
-    -webkit-border-top-right-radius: 5px; 
-    -moz-border-radius-topright: 5px; 
-    border-top-right-radius: 5px; 
-} 
-#cal .header .button:hover { 
-    background: -moz-linear-gradient(top, #d94215, #bb330f); 
-    background: -webkit-gradient(linear, left top, left bottom, from(#d94215), to(#bb330f)); 
-}
-
-
-#cal .header .month-year { 
-    letter-spacing: 1px; 
-    width: 100%; 
-    text-align: center; 
-}
-
-
-#cal table { 
-    background:#fff; 
-    border-collapse:collapse; 
-} 
-#cal td { 
-    color:#2b2b2b; 
-    width:30px; 
-    height:30px; 
-    line-height:30px; 
-    text-align:center; 
-    border:1px solid #e6e6e6; 
-    cursor:default; 
-} 
-#cal #days td { 
-    height:26px; 
-    line-height: 26px; 
-    text-transform:uppercase; 
-    font-size:90%; 
-    color:#9e9e9e; 
-} 
-#cal #days td:not(:last-child) { 
-    border-right:1px solid #fff; 
-}
-
-#cal #cal-frame td.today { 
-    background:#ededed; 
-    color:#8c8c8c; 
-    box-shadow:1px 1px 0px #fff inset; 
-    -moz-box-shadow:1px 1px 0px #fff inset; 
-    -webkit-box-shadow:1px 1px 0px #fff inset; 
-} 
-#cal #cal-frame td:not(.nil):hover { 
-    color:#fff; 
-    text-shadow: #6C1A07 0px -1px; 
-    background:#CD310D; 
-    background: -moz-linear-gradient(top, #b32b0c, #cd310d); 
-    background: -webkit-gradient(linear, left top, left bottom, from(#b32b0c), to(#cd310d)); 
-    -moz-box-shadow:0px 0px 0px; 
-    -webkit-box-shadow:0px 0px 0px; 
-}
-
-#cal #cal-frame td span { 
-    font-size:80%; 
-    position:relative; 
-} 
-#cal #cal-frame td span:first-child { 
-    bottom:5px; 
-} 
-#cal #cal-frame td span:last-child { 
-    top:5px; 
-}
-
-#cal #cal-frame table.curr { 
-    float:left;      
-} 
-#cal #cal-frame table.temp { 
-    position:absolute; 
-}
-
 
 /*****************************************Parent Attendance******************************/
 
@@ -1344,7 +1055,6 @@ body {
   /*background:rgba(0,0,0,0.5);*/
   display: inline-block;
   width: 11.5%;
-  position: relative;
   margin-left: 10.5%;
   margin-right: 11%;
   margin-top: 4%; 
@@ -1359,17 +1069,10 @@ body {
   border-radius: 50%;
 }
 
-.subjects_body_p{
+.results_body_p{
   width: 75%;
-<<<<<<< HEAD
-
-  margin-bottom:7%;
-=======
-/*  height: 62.5%;*/
-
-  margin-bottom: 7%;
->>>>>>> fbde3edae6966232b1071cf909c47329662fc66d
-  margin-top: 2%;
+  height: 62.5%;
+  bottom:15%;
   position: fixed;
   right: 2.5%;
   resize: both;
@@ -1378,15 +1081,6 @@ body {
   font-family: 'Kanit', sans-serif;
 
 
-}
-.subs{
-  font-weight: 800;
-  font-size: 100%;
-}
-
-.subs{
-  font-weight: 800;
-  font-size: 100%
 }
 
 .onhover:hover{
@@ -1403,81 +1097,134 @@ body {
 }
 
 /*<Shahzeb: Results parent*/
-.results_body_p{
-  /*background:rgba(255,255,255,0.5);*/
-  width: 75%;
-  height: 62.5%;
-  bottom:15%;
+
+/*Zainab remove screen*/
+
+.borderBox{
+  width: 40%;
+  height: 70%;
+  position: relative;
+  margin-left: 7%;
+  margin-top: 9%;
+  /*display: inline-block;*/
+  color: #D3D3D3;
+  border: 7px solid #D3D3D3; 
+  font-family: 'Kanit' sans-serif;
+
+
+}
+
+.borderBox_h{
+  color: #008CBA;
+  font-family: 'Kanit' sans-serif;
+  font-size: 180%;
+
+  text-align: center;
+}
+
+.borderBox_name{
+  color: black;
+  font-family: 'Kanit' sans-serif;
+  font-size: 150%;
+  text-align: center;
+  margin-top: 20%;
+
+}
+
+.borderBox_grade{
+  color: black;
+  font-family: 'Kanit' sans-serif;
+  font-size: 150%;
+  text-align: center;
+
+  }
+
+.borderBox_date{
+  color: black;
+  font-family: 'Kanit' sans-serif;
+  font-size: 150%;
+  text-align: center;
+  }
+
+  .whiteBox{
+ width: 40%;
   position: absolute;
-  right: 2.5%;
+  background:#D3D3D3;
+  height:70%;
+  margin-left: 50%;
+  bottom: 15%;
+
+  }
+
+  .whiteBox_warn{
+  color: black;
+  font-family: 'Kanit' sans-serif;
+  font-size: 150%;
+  text-align: center;
+  margin-top: 20%;
   display: block;
+  }
+
+  .removeConfirm{
+  text-align:center;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  font-size: 100%;
   margin: auto;
-  border-radius: 10px;
-  font-family: 'Kanit', sans-serif;
-}
-
-
-.arrow {
-  border: solid black;
-  border-width: 0 3px 3px 0;
-  display: inline-block;
-  padding: 5px;
-}
-
-.arrow:hover{
-  background:rgba(255,255,255,0.5);
-
-}
-
-.right {
-  margin-left: 5%;
-  transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-}
-
-.left {
-  margin-right: 5%;
-    transform: rotate(135deg);
-    -webkit-transform: rotate(135deg);
-}
-
-.up {
-    transform: rotate(-135deg);
-    -webkit-transform: rotate(-135deg);
-}
-
-.down {
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-}
-
-
-.resultsMonthArea{
-
-  margin: auto;
+  min-width: 42%;
+  margin-top: 2%;
+  height: 10%;
+  background-color: #ff4500;
+  color: black; 
+  border: 2px solid #ff4500;
+  border-radius: 8px;
+  text-align: center;
+  /*z-index: 1;*/
+  /*align-content: center;*/
+  /*position: relative;*/
+  display: block;
   
-}
-.results_month{
-  display: inline-block;
-  /*text-align: center;*/
-}
+  }
 
-.results_table_p{
-  background:rgba(255,255,255,0.5);
-  width: 90%;
-  height: 62.5%;
-  bottom: 5%;
-  left: 5%;
-  position: absolute;
-  resize: both;
-  border-radius: 10px;
-  display: inline-block;
-  font-family: 'Kanit', sans-serif;
+  .removeConfirm:hover{
+    background-color: #FFFFFF;
+    color: #ff4500;
+
 }
 
+.cancelButton{
+    text-align:center;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  font-size: 100%;
+  margin: auto;
+  min-width: 42%;
+  margin-top: 2%;
+  height: 10%;
+  background-color: #A9A9A9;
+  color: black; 
+  border: 2px solid #A9A9A9;
+  border-radius: 8px;
+  text-align: center;
+  /*z-index: 1;*/
+  /*align-content: center;*/
+  /*position: relative;*/
+  display: block;
+  
+  }
 
+  .cancelButton:hover{
+    background-color: #FFFFFF;
+    color: #A9A9A9;
 
-.results_table_heading{
-  width: 19%;
-  margin-left: 10%;
+}
+
+.sRemove{
+  color: black;
+  font-family: 'Kanit' sans-serif;
+  font-size: 150%;
+  text-align: center;
+  margin-top: 20%;
 }
