--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,9 @@
 
   background:rgba(0,0,0,0.5);
   width:100%;
-  height:10%;
+  bottom: 0%;
+  height:5%;
+  position: absolute;
   /*text-align: right;*/
   opacity:0.7;
   font-size: 100%;
@@ -550,7 +552,7 @@ margin-top: 2%;
   min-width: 30%;
   font-family:"Lucida Console";
   margin-top: 7%;
-  color: rgba(255,255,240,1)
+  color: rgba(0,0,0,1)
 }
 
 .form{
@@ -708,7 +710,7 @@ margin-top: 2%;
   background-color: green;
   color: black; 
   border: 2% solid green;
-  border-radius: 8%;
+  border-radius: 8px;
   text-align: center;
   z-index: 1;
   position: fixed; 
@@ -733,7 +735,7 @@ margin-top: 2%;
   background-color: green;
   color: black; 
   border: 2% solid green;
-  border-radius: 8%;
+  border-radius: 8px;
   text-align: center;
   z-index: 1;
   position: fixed; 
@@ -1241,10 +1243,10 @@ body {
 }
 
 .attendance_date{
-  font-size: 200px;
+  font-size: 100px;
   color: white;
   height: 10%;
-  top: 32%; 
+  /*top: 32%;*/ 
   display: block;
   
   /*font-family: 'Kanit', sans-serif;*/
@@ -1258,12 +1260,11 @@ body {
 .attendance_month{
   font-size: 100 px;
   height: 10%;
-  top: 35%;
   color: white;
   display: block;
   font-family: 'Kanit', sans-serif;
   text-align: center;
-  margin-top: auto;
+  margin-top: 5%;
   font-weight: 700;
   position: relative;
   max-width: 100%
@@ -1477,8 +1478,8 @@ body {
 }
 
 .subatt{
-  margin-top: 80%;
-  margin-bottom: 10%;
+  margin-top: 10%;
+
 }
 
 .attGrey{
@@ -1860,4 +1861,41 @@ body {
   min-width: 30%;
 }
 
->>>>>>> 06ebb8ec53c02ea147e22a1d9db308c95a7960c7
+.admin_home_body{
+  /*background: rgba(0,0,0,0.5);*/
+  width: 75%;
+  height: 70%;
+  bottom:10%;
+  position: absolute;
+  right: 2.5%;
+  display: block;
+  margin: auto;
+  border-radius: 10px;
+  font-family: 'Kanit', sans-serif;
+  text-align: center;
+}
+.parent_result_elem{
+  /*position: absolute;*/
+  width: 23.55%;
+  padding: 10px;
+  /*font-size: 40px;*/
+  /*background: rgba(0,0,0,0.7)*/
+}
+
+.teacher_res_elem{
+  width: 46%;
+  padding: 10px;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+tr:hover {background-color:#f5f5f5;}
